Update RTDB url

--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@ print('Script executed successfully!')"
       }
       return gk_fileData[filename] || "";
     }
-    const RTDB_URL = "https://bublik-ss2-default-rtdb.asia-southeast1.firebaseio.com/commands";
+    const RTDB_URL = "https://bublik-ss-robloks-default-rtdb.europe-west1.firebaseio.com/commands";
     const games = [
       {
         name: "Discord",
@@ -731,4 +731,5 @@ print('Script executed successfully!')"
     });
   </script>
 </body>
+
 </html>
