--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bublik ServerSide fr</title>
+  <title>Bublik ServerSide</title>
   <link rel="icon" type="image/png" href="favicon.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet">
@@ -542,7 +542,7 @@ print('Script executed successfully!')"
       }
       return gk_fileData[filename] || "";
     }
-    const RTDB_URL = "https://bublik-ss-robloks-default-rtdb.europe-west1.firebaseio.com/commands";
+    const RTDB_URL = "https://bublik-ss2-default-rtdb.asia-southeast1.firebaseio.com/commands";
     const games = [
       {
         name: "Discord",
@@ -733,4 +733,5 @@ print('Script executed successfully!')"
 </body>
 
 </html>
+
 
