change rtdb url

--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@ print('Script executed successfully!')"
       }
       return gk_fileData[filename] || "";
     }
-    const RTDB_URL = "https://bublik-ss2-default-rtdb.asia-southeast1.firebaseio.com/commands";
+    const RTDB_URL = "https://bublik-ss2-default-rtdb.asia-southeast1.firebasedatabase.app/commands";
     const games = [
       {
         name: "Discord",
@@ -733,5 +733,6 @@ print('Script executed successfully!')"
 </body>
 
 </html>
+
 
 
